<resources>
    <string name="app_name">BookStore2077</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_store_home">StoreHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="action_sign_up">Регистрация</string>
    <string name="authorization">АВТОРИЗАЦИЯ</string>
    <string name="shop">Магазин</string>
    <string name="personal_page">Моя страница</string>
    <string name="recommendations">Подборка</string>
    <string name="audiobooks">Аудиокниги</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="button_register">Зарегестрироваться</string>
</resources>
