<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:layout_gravity="center"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="185dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="Books+"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256"
        app:srcCompat="@drawable/book_plus" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="346dp"
        android:layout_height="246dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circled_corners_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/registrationSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circled_corners_gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            tools:layout_editor_absoluteX="99dp" />

        <EditText
            android:id="@+id/registrationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circled_corners_gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Имя"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationLogin"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="99dp" />

        <EditText
            android:id="@+id/registrationLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/circled_corners_gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_login"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmail"
            tools:layout_editor_absoluteX="99dp" />

        <EditText
            android:id="@+id/registrationEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/circled_corners_gray"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="E-mail"
            app:layout_constraintTop_toBottomOf="@+id/registrationSurname"
            tools:layout_editor_absoluteX="99dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/circled_corners_gray"
            android:onClick="onRegisterClick"
            android:text="@string/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/circled_corners_gray"
            android:onClick="onBackClick"
            android:text="Назад"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword" />

        <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circled_corners_gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:onClick="onRegisterClick"
            android:text="@string/enter_password"
            app:layout_constraintTop_toBottomOf="@+id/registrationName"
            tools:layout_editor_absoluteX="104dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>